--- a/home-page.html
+++ b/home-page.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/home-page.css">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@500;600&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <title>Ghost of Tsushima - home page</title>
 </head>
 <body>
@@ -133,5 +137,8 @@
       </p>
     </div>
   </footer>
+
+
+  <script src="scripts/home-page.js"></script>
 </body>
 </html>
