Adding the video

--- a/home-page.html
+++ b/home-page.html
@@ -38,11 +38,13 @@
       <div class="nav-item">Privacy Policy</div>
       <div class="nav-item">Terms of Survice</div>
     </div>
-
   </nav>
 
-  <section class="hero">
-    <img src="images/test.webp" class="hero-bg">
+  <section class="video-section">
+    <video class="hero-video" autoplay muted loop playsinline>
+      <source src="video/hero-video.mp4" type="video/mp4">
+      Your browser does not support HTML5 video.
+    </video>
     <img src="images/game-name.png" class="hero-title">
   </section>
 
