Fixed the screens section

--- a/home-page.html
+++ b/home-page.html
@@ -80,22 +80,21 @@
   </section>
 
   <section class="screens-section">
-    <h3>Screens</h3>
+    <h3 class="section-title">Screens</h3>
 
-    <div class="gallery">
-      <img src="images/screenshot1.webp" class="shot">
+    <div class="screens-grid">
+      <img src="images/screenshot1.webp" class="shot big">
       <img src="images/screenshot2.webp" class="shot">
       <img src="images/screenshot3.webp" class="shot">
-      <img src="images/screenshot4.webp" class="shot">
-      <img src="images/screenshot5.webp" class="shot">
       <img src="images/screenshot6.webp" class="shot">
+      <img src="images/screenshot4.webp" class="shot">
     </div>
 
     <div class="box" id="box">
       <button class="close-button">X</button>
-      <button class="nav prevous-button">&#10094;</button>
+      <button class="prevous-button">&#10094;</button>
       <img class="box-image">
-      <button class="nav next-button">&#10095;</button>
+      <button class="next-button">&#10095;</button>
     </div>
   </section>
 
