--- a/home-page.html
+++ b/home-page.html
@@ -101,17 +101,17 @@
   <section class="feature-section">
     <div class="feature-section-item" id="characters">
       <h2>Characters</h2>
-    <img src="images/pic-test-1.avif" alt="Ghost of Tsushima characters">
+    <img src="images/characters-section-image2.png" alt="Ghost of Tsushima characters">
     <p>
-      Meet the warriors and legends of Tsushima.
+      Meet the warriors and legends of Tsushima
     </p>
     </div>
     
     <div class="feature-section-item" id="world">
       <h2>World & Backgrounds</h2>
-    <img src="images/pic-test-2.avif" alt="World of Tsushima">
+    <img src="images/backgrounds-section-image.png" alt="World of Tsushima">
     <p>
-      Explore the land, history, and beauty of Tsushima.
+      Explore the land, history, and beauty of Tsushima
     </p>
     </div>
   </section>
