--- a/home-page.html
+++ b/home-page.html
@@ -60,6 +60,7 @@
 
   <section id="story" class="story-section">
     <h1 class="story-title">THE RISE OF THE GHOST</h1>
+    <h2 class="story-mini-title">Story</h2>
 
     <article class="story-article">
 
@@ -99,16 +100,16 @@
   </section>
 
   <section class="feature-section">
-    <div class="feature-section-item" id="characters">
-      <h2>Characters</h2>
+    <div class="feature-section-item">
+      <h2 id="characters">Characters</h2>
     <img src="images/characters-section-image2.png" alt="Ghost of Tsushima characters">
     <p>
       Meet the warriors and legends of Tsushima
     </p>
     </div>
     
-    <div class="feature-section-item" id="world">
-      <h2>World & Backgrounds</h2>
+    <div class="feature-section-item">
+      <h2 id="world">World & Backgrounds</h2>
     <img src="images/backgrounds-section-image.png" alt="World of Tsushima">
     <p>
       Explore the land, history, and beauty of Tsushima
