Making the warning pop-up + view changes on the images

--- a/wallpapers-page.html
+++ b/wallpapers-page.html
@@ -8,6 +8,19 @@
   <title>World & Backgrounds</title>
 </head>
 <body>
+  <div class="content-warning">
+    <div class="content-warning-box">
+      <h2>Content Warning</h2>
+      <p>
+        The wallpapers on this page may contain spoilers related to the game's story, characters, or events.
+      </p>
+
+      <button class="content-warning-accept">
+        I understand
+      </button>
+    </div>
+  </div>
+
   <nav class="navbar">
     <div class="logo">
       <a href="home-page.html">
@@ -36,25 +49,14 @@
     <h1>Wallpapers</h1>
 
     <div class="wallpapers-grid">
-      <img src="wallpapers/wallpaper1.png" class="shot" alt="Wallpaper 01">
-      <img src="wallpapers/wallpaper2.png" class="shot" alt="Wallpaper 02">
-      <img src="wallpapers/wallpaper3.png" class="shot" alt="Wallpaper 03">
-      <img src="wallpapers/wallpaper4.png" class="shot" alt="Wallpaper 04">
-      <img src="wallpapers/wallpaper5.png" class="shot" alt="Wallpaper 05">
-      <img src="wallpapers/wallpaper6.png" class="shot" alt="Wallpaper 06">
-      <img src="wallpapers/wallpaper7.jpg" class="shot" alt="Wallpaper 07">
-      <img src="wallpapers/wallpaper8.jpg" class="shot" alt="Wallpaper 08">
-      <img src="wallpapers/wallpaper9.jpg" class="shot" alt="Wallpaper 09">
-      <img src="wallpapers/wallpaper10.jpg" class="shot" alt="Wallpaper 10">
-      <img src="wallpapers/wallpaper11.jpg" class="shot" alt="Wallpaper 11">
-      <img src="wallpapers/wallpaper12.jpg" class="shot" alt="Wallpaper 12">
-      <img src="wallpapers/wallpaper13.jpg" class="shot" alt="Wallpaper 13">
-      <img src="wallpapers/wallpaper14.jpg" class="shot" alt="Wallpaper 14">
-      <img src="wallpapers/wallpaper15.jpg" class="shot" alt="Wallpaper 15">
-      <img src="wallpapers/wallpaper16.jpg" class="shot" alt="Wallpaper 16">
-      <img src="wallpapers/wallpaper17.jpg" class="shot" alt="Wallpaper 17">
-      <img src="wallpapers/wallpaper18.jpg" class="shot" alt="Wallpaper 18">
-      <img src="wallpapers/wallpaper19.jpg" class="shot" alt="Wallpaper 19">
+      <img src="wallpapers-old/wallpaper1.jpg" class="shot" loading="lazy" alt="Wallpaper 01">
+      <img src="wallpapers-old/wallpaper2.jpg" class="shot" loading="lazy" alt="Wallpaper 02">
+      <img src="wallpapers-old/wallpaper3.jpg" class="shot" loading="lazy" alt="Wallpaper 03">
+      <img src="wallpapers-old/wallpaper4.jpg" class="shot" loading="lazy" alt="Wallpaper 04">
+      <img src="wallpapers-old/wallpaper5.jpg" class="shot" loading="lazy" alt="Wallpaper 05">
+      <img src="wallpapers-old/wallpaper6.jpg" class="shot" loading="lazy" alt="Wallpaper 06">
+      <img src="wallpapers-old/wallpaper7.jpg" class="shot" loading="lazy" alt="Wallpaper 07">
+      <img src="wallpapers-old/wallpaper8.jpg" class="shot" loading="lazy" alt="Wallpaper 08">
     </div>
   </section>
 
@@ -65,6 +67,7 @@
     <button class="next-button">&#10095;</button>
   </div>
 
+  <script src="scripts/warning-contain-pop-up.js"></script>
   <script src="scripts/image-viewer.js"></script>
 </body>
 </html>
