Making the characters page + the feedback page.

--- a/home-page.html
+++ b/home-page.html
@@ -102,7 +102,7 @@
   <section class="feature-section">
     <div class="feature-section-item">
       <h2 id="characters">Characters</h2>
-      <a href="" class="image-link">
+      <a href="characters-page.html" class="image-link">
        <img src="images/characters-section-image2.png" alt="Ghost of Tsushima characters"> 
       </a>
     
