Adding the links to support, privacy&policy and  term of use + adding media query

--- a/characters-page.html
+++ b/characters-page.html
@@ -26,9 +26,17 @@
         <div class="nav-item">World & Wallpapers</div>
       </a>
       
-      <div class="nav-item">Support</div>
-      <div class="nav-item">Privacy Policy</div>
-      <div class="nav-item">Terms of Survice</div>
+      <a href="https://www.playstation.com/en-ca/support/" target="_blank">
+        <div class="nav-item">Support</div> 
+      </a>
+
+      <a href="https://www.playstation.com/en-us/legal/privacy-policy/" target="_blank">
+        <div class="nav-item">Privacy Policy</div> 
+      </a>
+
+      <a href="https://www.playstation.com/en-us/legal/website-terms-of-use/" target="_blank">
+        <div class="nav-item">Terms of Survice</div> 
+      </a>
     </div>
   </nav>
 
@@ -102,7 +110,7 @@
   <div class="character-row">
     <img src="characters/kenji.png" alt="Kenji the Merchant">
     <div class="info">
-      <h2>Kenji the Merchant</h2>
+      <h2>Kenji <br> the Merchant</h2>
       <p>A clever but unreliable sake trader who survives through lies and luck. Despite his cowardly nature, he occasionally helps Jin.</p>
     </div>
   </div>
@@ -110,7 +118,7 @@
   <div class="character-row">
     <img src="characters/gyozen.png" alt="Gyozen the Storyteller">
     <div class="info">
-      <h2>Gyozen the Storyteller</h2>
+      <h2>Gyozen <br> the Storyteller</h2>
       <p>A mysterious monk who narrates legendary tales of Tsushima. He guides warriors through mythic stories and the Legends mode.</p>
     </div>
   </div>
