--- a/wallpapers-page.html
+++ b/wallpapers-page.html
@@ -35,13 +35,21 @@
         <div class="nav-item">Home</div>
       </a>
 
-      <a href="#characters">
+      <a href="characters-page.html">
         <div class="nav-item">Characters</div>
       </a>
       
-      <div class="nav-item">Support</div>
-      <div class="nav-item">Privacy Policy</div>
-      <div class="nav-item">Terms of Survice</div>
+      <a href="https://www.playstation.com/en-ca/support/" target="_blank">
+        <div class="nav-item">Support</div> 
+      </a>
+
+      <a href="https://www.playstation.com/en-us/legal/privacy-policy/" target="_blank">
+        <div class="nav-item">Privacy Policy</div> 
+      </a>
+
+      <a href="https://www.playstation.com/en-us/legal/website-terms-of-use/" target="_blank">
+        <div class="nav-item">Terms of Survice</div> 
+      </a>
     </div>
   </nav>
 
