--- a/home-page.html
+++ b/home-page.html
@@ -54,7 +54,7 @@
       <source src="video/hero-video.mp4" type="video/mp4">
       Your browser does not support HTML5 video.
     </video>
-    <img src="images/game-name.png" class="hero-title">
+    <img src="images/game-name.png" class="hero-title" alt="Game title">
   </section>
 
   <div class="quote-section">
@@ -80,7 +80,7 @@
 
       <p>
         You are Jin Sakai, one of the last surviving samurai.
-        To protect his homeland and its people, Jin must abandon the rigid of the samurai and forge a new path-the path of the Ghost.
+        To protect his homeland and its people, Jin must abandon the rigid of the samurai and forge a new path 	&mdash; the path of the Ghost.
       </p>
 
       <p>
@@ -151,7 +151,7 @@
       <p>
         <br>
         Game information sourced from official and fan-based references.<br>
-        This website is fan-made and not affiliated with Sony Interactive Entertatinment.
+        This website is fan-made and not affiliated with Sony Interactive Entertainment.
       </p>
     </div>
   </footer>
