Add feedback page section to home page + fixing the nav par in feedback page

--- a/home-page.html
+++ b/home-page.html
@@ -132,6 +132,12 @@
     </div>
   </section>
 
+  <section class="feedback-section">
+    <h2>Help Us Improve</h2>
+    <p>We'd love to hear your thoughts.</p>
+    <a href="feedback.html" class="feedback-button">Give Feedback</a>
+  </section>
+
   <footer class="site-footer">
     <div class="footer-esrb">
       <a href="https://www.esrb.org/" target="_blank">
