New video + cleaning the images and wallpapers file + adding an favicon + adding an Alt body for the email + The most important thing is: adding a note in the feedback response :)

--- a/feedback.html
+++ b/feedback.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles/home-page.css">
   <link rel="stylesheet" href="styles/feedback.css">
 
+  <link rel="icon" href="images/favicon.ico">
   <title>Help Us Improve the Website</title>
 </head>
 <body>
@@ -70,8 +71,11 @@
       </div>
     </form>
 
-    <p id="responseMessage" style="display: none;" class="responseMessage">
-      Your feedback has been sent successfully. Thank you!
+    <p id="responseMessage" style="display: none;" class="response-message">
+      Your feedback has been sent successfully. Thank you!<br><br>
+      <span class="response-note">
+        If this is your first time using this email with us, you will receive a confirmation message.
+      </span>
     </p>
   </div>
 
