--- a/home-page.html
+++ b/home-page.html
@@ -9,6 +9,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
+  <link rel="icon" href="images/favicon.ico">
   <title>Ghost of Tsushima - home page</title>
 </head>
 <body>
@@ -112,7 +114,7 @@
     <div class="feature-section-item">
       <h2 id="characters">Characters</h2>
       <a href="characters-page.html" class="image-link">
-       <img src="images/characters-section-image2.png" alt="Ghost of Tsushima characters"> 
+       <img src="images/characters-section-image.png" alt="Ghost of Tsushima characters"> 
       </a>
     
     <p>
