--- a/wallpapers-page.html
+++ b/wallpapers-page.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/home-page.css">
   <link rel="stylesheet" href="styles/wallpapers-page.css">
+
+  <link rel="icon" href="images/favicon.ico">
   <title>World & Backgrounds</title>
 </head>
 <body>
@@ -57,14 +59,14 @@
     <h1>Wallpapers</h1>
 
     <div class="wallpapers-grid">
-      <img src="wallpapers-old/wallpaper1.jpg" class="shot" loading="lazy" alt="Wallpaper 01">
-      <img src="wallpapers-old/wallpaper2.jpg" class="shot" loading="lazy" alt="Wallpaper 02">
-      <img src="wallpapers-old/wallpaper3.jpg" class="shot" loading="lazy" alt="Wallpaper 03">
-      <img src="wallpapers-old/wallpaper4.jpg" class="shot" loading="lazy" alt="Wallpaper 04">
-      <img src="wallpapers-old/wallpaper5.jpg" class="shot" loading="lazy" alt="Wallpaper 05">
-      <img src="wallpapers-old/wallpaper6.jpg" class="shot" loading="lazy" alt="Wallpaper 06">
-      <img src="wallpapers-old/wallpaper7.jpg" class="shot" loading="lazy" alt="Wallpaper 07">
-      <img src="wallpapers-old/wallpaper8.jpg" class="shot" loading="lazy" alt="Wallpaper 08">
+      <img src="wallpapers/wallpaper1.jpg" class="shot" loading="lazy" alt="Wallpaper 01">
+      <img src="wallpapers/wallpaper2.jpg" class="shot" loading="lazy" alt="Wallpaper 02">
+      <img src="wallpapers/wallpaper3.jpg" class="shot" loading="lazy" alt="Wallpaper 03">
+      <img src="wallpapers/wallpaper4.jpg" class="shot" loading="lazy" alt="Wallpaper 04">
+      <img src="wallpapers/wallpaper5.jpg" class="shot" loading="lazy" alt="Wallpaper 05">
+      <img src="wallpapers/wallpaper6.jpg" class="shot" loading="lazy" alt="Wallpaper 06">
+      <img src="wallpapers/wallpaper7.jpg" class="shot" loading="lazy" alt="Wallpaper 07">
+      <img src="wallpapers/wallpaper8.jpg" class="shot" loading="lazy" alt="Wallpaper 08">
     </div>
   </section>
 
