change the home-page name to index so it works on github automatically

--- a/wallpapers-page.html
+++ b/wallpapers-page.html
@@ -25,7 +25,7 @@
 
   <nav class="navbar">
     <div class="logo">
-      <a href="home-page.html">
+      <a href="index.html">
         <img src="images/game-logo.webp" alt="logo">
       </a>
       
@@ -33,7 +33,7 @@
 
     <div class="nav-items">
 
-      <a href="home-page.html">
+      <a href="index.html">
         <div class="nav-item">Home</div>
       </a>
 
