--- a/feedback.html
+++ b/feedback.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar">
     <div class="logo">
-      <a href="home-page.html">
+      <a href="index.html">
         <img src="images/game-logo.webp" alt="logo">
       </a>
       
@@ -21,7 +21,7 @@
 
     <div class="nav-items">
 
-      <a href="home-page.html">
+      <a href="index.html">
         <div class="nav-item">Home</div>
       </a>
 
