--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <nav class="navbar">
     <div class="logo">
-      <a href="home-page.html">
+      <a href="index.html">
         <img src="images/game-logo.webp" alt="logo">
       </a>
       
