--- a/wallpapers-page.html
+++ b/wallpapers-page.html
@@ -59,15 +59,8 @@
     <section class="wallpapers">
       <h1>Wallpapers</h1>
 
-      <div class="wallpapers-grid">
-        <img src="wallpapers/wallpaper1.jpg" class="shot" loading="lazy" alt="Wallpaper 01">
-        <img src="wallpapers/wallpaper2.jpg" class="shot" loading="lazy" alt="Wallpaper 02">
-        <img src="wallpapers/wallpaper3.jpg" class="shot" loading="lazy" alt="Wallpaper 03">
-        <img src="wallpapers/wallpaper4.jpg" class="shot" loading="lazy" alt="Wallpaper 04">
-        <img src="wallpapers/wallpaper5.jpg" class="shot" loading="lazy" alt="Wallpaper 05">
-        <img src="wallpapers/wallpaper6.jpg" class="shot" loading="lazy" alt="Wallpaper 06">
-        <img src="wallpapers/wallpaper7.jpg" class="shot" loading="lazy" alt="Wallpaper 07">
-        <img src="wallpapers/wallpaper8.jpg" class="shot" loading="lazy" alt="Wallpaper 08">
+      <div class="wallpapers-grid js-wallpapers-grid">
+        
       </div>
     </section> 
   </main>
@@ -81,6 +74,7 @@
   </div>
 
   <script src="scripts/warning-contain-pop-up.js"></script>
+  <script src="scripts/wallpapers.js"></script>
   <script src="scripts/image-viewer.js"></script>
 </body>
 </html>
