Generate HTML to JS for characters page

--- a/characters-page.html
+++ b/characters-page.html
@@ -43,105 +43,11 @@
   </nav>
   
   <main>
-    <section class="characters-list-view">
+    <section class="characters-list-view js-characters-list-view">
     <h2 class="title">Character</h2>
-
-    <div class="character-row">
-      <img src="characters/jin.png" alt="Jin Sakai">
-      <div class="info">
-        <h2>Jin Sakai</h2>
-        <p>The last surviving samurai of Clan Sakai. As Tsushima falls to the Mongols, Jin adopts unconventional tactics and becomes known as the Ghost.</p>
-      </div>
-    </div>
-
-    <div class="character-row">
-      <img src="characters/shimura.png" alt="Lord Shimura">
-      <div class="info">
-        <h2>Lord Shimura</h2>
-        <p>Jin Sakai's uncle and the Jito of Tsushima. He embodies traditional samurai honor and struggles with Jin's transformation.</p>
-      </div>
-    </div>
-
-    <div class="character-row">
-      <img src="characters/khan.png" alt="Khotun Khan">
-      <div class="info">
-        <h2>Khotun Khan</h2>
-        <p>The ruthless Mongol general leading the invasion of Tsushima. Intelligent and manipulative, he seeks to break the samurai's code.</p>
-      </div>
-    </div>
-
-    <div class="character-row">
-      <img src="characters/yuna.png" alt="Yuna">
-      <div class="info">
-        <h2>Yuna</h2>
-        <p>A skilled thief and survivor who helps Jin escape captivity. She encourages him to abandon tradition and do whatever it takes to save Tsushima.</p>
-      </div>
-    </div>
-
-    <div class="character-row">
-      <img src="characters/ryuzo.png" alt="Ryuzo">
-      <div class="info">
-        <h2>Ryuzo</h2>
-        <p>Leader of the Straw Hat Ronin and Jin's former friend. Torn between survival and honor, his choices lead him down a tragic path.</p>
-      </div>
-    </div>
-
-    <div class="character-row">
-      <img src="characters/masako.png" alt="Lady Masako Adachi">
-      <div class="info">
-        <h2>Lady Masako Adachi</h2>
-        <p>A fierce samurai widow driven by revenge. Her journey explores grief, loyalty, and the cost of endless hatred.</p>
-      </div>
-    </div>
-
-    <div class="character-row">
-      <img src="characters/ishikawa.png" alt="Sensei Ishikawa">
-      <div class="info">
-        <h2>Sensei Ishikawa</h2>
-        <p>A legendary archer and former samurai mentor. He is strict, disciplined, and haunted by the mistakes of his past.</p>
-      </div>
-    </div>
-
-    <div class="character-row">
-      <img src="characters/norio.png" alt="Norio">
-      <div class="info">
-        <h2>Norio</h2>
-        <p>A warrior monk of Cedar Temple. He fights to protect the innocent while battling rage and despair within himself.</p>
-      </div>
-    </div>
-
-    <div class="character-row">
-      <img src="characters/kenji.png" alt="Kenji the Merchant">
-      <div class="info">
-        <h2>Kenji <br> the Merchant</h2>
-        <p>A clever but unreliable sake trader who survives through lies and luck. Despite his cowardly nature, he occasionally helps Jin.</p>
-      </div>
-    </div>
-
-    <div class="character-row">
-      <img src="characters/gyozen.png" alt="Gyozen the Storyteller">
-      <div class="info">
-        <h2>Gyozen <br> the Storyteller</h2>
-        <p>A mysterious monk who narrates legendary tales of Tsushima. He guides warriors through mythic stories and the Legends mode.</p>
-      </div>
-    </div>
-
-    <div class="character-row">
-      <img src="characters/guardian.png" alt="Samurai Guardian">
-      <div class="info">
-        <h2>Samurai Guardian</h2>
-        <p>A devoted samurai tasked with protecting sacred lands and villages. He represents honor, duty, and the traditional code of the samurai.</p>
-      </div>
-    </div>
-
-    <div class="character-row">
-      <img src="characters/raider.png" alt="Mongol Raider">
-      <div class="info">
-        <h2>Mongol Raider</h2>
-        <p>A brutal invader who terrorizes villages across Tsushima. Raiders represent the chaos and cruelty of the Mongol invasion.</p>
-      </div>
-    </div>
     </section> 
   </main>
+
+  <script src="scripts/characters.js"></script>
 </body>
 </html>
