Move feedback JS to a seprate file

--- a/feedback.html
+++ b/feedback.html
@@ -82,19 +82,6 @@
   </main>
 
 
-  <script>
-    function sendFeedback () {
-      const form = document.getElementById('feedbackForm');
-
-      fetch(form.action, {
-        method: 'post',
-        body: new FormData(form)
-      });
-
-      form.style.display = "none";
-
-      document.getElementById('responseMessage').style.display = "flex";
-    }
-  </script>
+  <script src="scripts/feedback-response-message.js"></script>
 </body>
 </html>
