--- a/characters-page.html
+++ b/characters-page.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Ghost of Tsushima | Characters</title>
+
+  <meta name="description" content="Discover the main and supporting characters of Ghost of Tsushima, including Jin Sakai and the warriors who shaped the fate of the island.">
+
   <link rel="stylesheet" href="styles/index.css">
   <link rel="stylesheet" href="styles/characters-page.css">
 
   <link rel="icon" href="images/favicon.ico">
-  <title>Characters</title>
 </head>
 <body>
   <nav class="navbar">
