--- a/feedback.html
+++ b/feedback.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <title>Ghost of Tsushima | Feedback</title>
+
+  <meta name="description" content="Share your feedback about the Ghost of Tsushima fan-made website and help us improve the experience.">
+
   <link rel="stylesheet" href="styles/index.css">
   <link rel="stylesheet" href="styles/feedback.css">
 
   <link rel="icon" href="images/favicon.ico">
-  <title>Help Us Improve the Website</title>
 </head>
 <body>
   <nav class="navbar">
