--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/index.css">
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@500;600&display=swap" rel="stylesheet">
+
+  <title>Ghost of Tsushima | Home</title>
+
+  <meta name="description" content="A fan-made website inspired by Ghost of Tsushima, featuring the story of Jin Sakai, characters, world exploration, wallpapers, and game highlights.">
+
+  <meta name="author" content="Ghaida El-bagir">
+  <meta name="keywords" content="Ghost of Tsushima, Jin Sakai, Samurai, Tsushima Island, PlayStation, Game Fan Website">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@500;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
+  <link rel="stylesheet" href="styles/index.css">
+
   <link rel="icon" href="images/favicon.ico">
-  <title>Ghost of Tsushima - home page</title>
+</head>
 </head>
 <body>
   <nav class="navbar">
