--- a/wallpapers-page.html
+++ b/wallpapers-page.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Ghost of Tsushima | World & Wallpapers</title>
+
+  <meta name="description" content="Explore high-quality wallpapers inspired by the world of Ghost of Tsushima. This page may contain visual spoilers related to the game's story and characters.">
+
   <link rel="stylesheet" href="styles/index.css">
   <link rel="stylesheet" href="styles/wallpapers-page.css">
 
   <link rel="icon" href="images/favicon.ico">
-  <title>World & Backgrounds</title>
 </head>
 <body>
   <div class="content-warning">
