--- a/wallpapers-page.html
+++ b/wallpapers-page.html
@@ -54,7 +54,7 @@
       </a>
 
       <a href="https://www.playstation.com/en-us/legal/website-terms-of-use/" target="_blank">
-        <div class="nav-item">Terms of Survice</div> 
+        <div class="nav-item">Terms of Service</div> 
       </a>
     </div>
   </nav>
