Fix modal display, image sizing, and download button.

--- a/wallpapers-page.html
+++ b/wallpapers-page.html
@@ -73,7 +73,17 @@
   <div class="box" id="box">
     <button class="close-button">X</button>
     <button class="previous-button">&#10094;</button>
-    <img class="box-image">
+
+    <div class="box-image-wrapper">
+      <img class="box-image"> 
+
+      <a class="box-download" href="#" download>
+        <svg viewBox="0 0 24 24" class="download-icon">
+          <path d="M12 3v12m0 0l4-4m-4 4l-4-4M4 19h16"/>
+        </svg>
+      </a>
+    </div>
+    
     <button class="next-button">&#10095;</button>
   </div>
   
