Seprate viewer.js

--- a/index.html
+++ b/index.html
@@ -178,6 +178,6 @@
   </footer>
 
   <script src="scripts/reveal.js"></script>
-  <script src="scripts/image-viewer.js"></script>
+  <script src="scripts/screenshots-viewer.js"></script>
 </body>
 </html>
