--- a/wallpapers-page.html
+++ b/wallpapers-page.html
@@ -89,6 +89,6 @@
   
   <script src="scripts/wallpapers.js"></script>
   <script src="scripts/warning-contain-pop-up.js"></script>
-  <script src="scripts/image-viewer.js"></script>
+  <script src="scripts/wallpapers-viewer.js"></script>
 </body>
 </html>
