--- a/feedback.html
+++ b/feedback.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="styles/index.css">
   <link rel="stylesheet" href="styles/feedback.css">
 
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
   <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
